1. 옷 등록 화면 탭 이동 2. 옷 등록 레이아웃 스크롤뷰로 수정 3. 옷장 위치, 옷 종류, 옷 사이즈 Spinner로 표시되게 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".codyAdd"/>
+        <activity android:name=".post"/>
+        <activity android:name=".codyregistconfirm"/>
     </application>
 
 </manifest>
