--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CodyAdd"/>
+        <activity android:name=".AddMenu"/>
         <activity android:name=".Post"/>
-        <activity android:name=".CodyRegistConfirm"/>
+        <activity android:name=".CodyAdd"/>
     </application>
 
 </manifest>
