세팅화면 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".AddMenu"/>
         <activity android:name=".Post"/>
         <activity android:name=".CodyAdd"/>
+        <activity android:name=".Settings"/>
     </application>
 
 </manifest>
