1. DetailActivity 오류 수정 2. DB c_img 자료형 수정 3. 이미자 파일 로컬로 저장 후 경로로 불러오게 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".Settings"/>
         <activity android:name=".Cody" />
         <activity android:name=".SettingsNotice" />
+        <activity android:name=".DetailActivity"/>
     </application>
 
 </manifest>
