--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ClosetManagementServicesApp"
         android:windowSoftInputMode="adjustNothing"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
