--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".Settings"/>
         <activity android:name=".Cody" />
         <activity android:name=".SettingsNotice" />
+        <activity android:name=".SettingsService" />
         <activity android:name=".DetailActivity"/>
         <activity
             android:name=".CameraUtil_Cody"
