DetailCody 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".SettingsNotice" />
         <activity android:name=".SettingsService" />
         <activity android:name=".DetailActivity"/>
+        <activity android:name=".DetailCody" />
         <activity
             android:name=".CameraUtil_Cody"
             android:launchMode="singleTop" />
